--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,3 @@
-{% from "send_transaction.html" import send_transaction %}
 
 <!DOCTYPE html>
 <html>
@@ -7,6 +6,9 @@
 		<link href = '{{ url_for("static", filename = "styles.css") }}' rel = 'stylesheet' />
 	</head>
 	<body>
-		{{ send_transaction() }}
+		<div class = 'content'>
+			{% block body %}
+			{% endblock %}
+		</div>
 	</body>
 </html>
