--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,16 +1,20 @@
 {% macro stats() %}
-	<div class = 'flex-verticle stats'>
+	<div class = 'flex-row stats'>
 		<div class = 'rounded'>
 			<h2 class = 'center'>69</h2>
-			<div class = 'center'>Waitlist Position</div>
+			<p class = 'center'>Waitlist Position</p>
 		</div>
 		<div class = 'rounded'>
 			<h2 class = 'center'>420 420</h2>
-			<div class = 'center'>Total Points</div>
+			<p class = 'center'>Total Points</p>
 		</div>
 		<div class = 'rounded'>
 			<h2 class = 'center'>+ 420</h2>
-			<div class = 'center'>Points Today</div>
+			<p class = 'center'>Points Today</p>
+		</div>
+		<div class = 'rounded'>
+			<h2 class = 'center'>420</h2>
+			<p class = 'center'>Unique Swappers (since May 2nd)</p>
 		</div>
 	</div>
 {% endmacro %}
