--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,4 @@
+{% from 'update.html' import update_notification %}
 
 <!DOCTYPE html>
 <html>
@@ -6,6 +7,7 @@
 		<link href = '{{ url_for("static", filename = "styles.css") }}' rel = 'stylesheet' />
 	</head>
 	<body>
+		{{ update_notification() }}
 		<div class = 'content'>
 			{% block body %}
 			{% endblock %}
