--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,9 @@
 		<link href = '{{ url_for("static", filename = "styles.css") }}' rel = 'stylesheet' />
 	</head>
 	<body>
-		{{ update_notification() }}
+		{% if data['update'] %}
+			{{ update_notification() }}
+		{% endif %}
 		<div class = 'content'>
 			{% block body %}
 			{% endblock %}
