--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% macro settings() %}
 	<div class = 'rounded'>
 		<h2>Settings</h2>
-		<p>Change settings related to the bot</p>
+		<p>Coming soon!</p>
 	</div>
 {% endmacro %}
