Added navigation and changed layout of home slightly

--- a/templates/blacklist.html
+++ b/templates/blacklist.html
@@ -5,7 +5,7 @@
 {% block body %}
 	<div class = 'flex-col balance-wrapper'>
 		<div class = 'rounded balance-add'>
-			<h1>Balance</h1>
+			<h1>Blacklist</h1>
 			<p>Gave money to a family member or received money from a friend? Set their balances here to prevent the bot from keeping grudges!</p>
 			<p class = 'warn-text m-top-1'>Any changes require a restart to take effect!</p>
 			<div class = 'divider'></div>
