--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 			<a href = '' title = 'Settings'><i class="fas fa-cog"></i></a>
 			<div class = 'stick-bottom flex-col'>
 				<a href = '' title = 'FAQ'><i class="fas fa-question-circle"></i></a>
-				<a href = 'https://github.com/itslupus/shakepong' title = 'Github'><i class="fab fa-github"></i></a>
+				<a href = 'https://github.com/itslupus/shakepong' title = 'Github' target = '_blank'><i class="fab fa-github"></i></a>
 				<p>v{{ data['version'] }}</p>
 			</div>
 		</div>
