--- a/templates/components/stats.html
+++ b/templates/components/stats.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class = 'rounded'>
 			<h2 class = 'center'>{{ data['unique'] }}</h2>
-			<p class = 'center'>Unique Swappers (since May 3rd)</p>
+			<p class = 'center'>Unique Swappers</p>
 		</div>
 	</div>
 {% endmacro %}
