--- a/templates/components/swap.html
+++ b/templates/components/swap.html
@@ -1,7 +1,8 @@
 {% macro swap() %}
-	<div class = 'rounded swap' style = 'flex: 1;'>
+	<div class = 'rounded swap'>
 		<h2>Swap</h2>
 		<p>Send $5 to another swapper</p>
+		<div class = 'divider'></div>
 		<form id = 'swap' class = 'm-top-1' autocomplete = 'off'>
 			<div>
 				<div class = 'swap-input-wrapper'>
