--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,8 @@
 		<div class = 'navigation flex-col'>
 			<a href = '/' title = 'Home'><i class="fas fa-home"></i></a>
 			<a href = '/blacklist' title = 'Blacklist'><i class="fas fa-user-slash"></i></a>
-			<a href = '' title = 'Settings'><i class="fas fa-cog"></i></a>
+			<a href = '/settings' title = 'Settings'><i class="fas fa-cog"></i></a>
 			<div class = 'stick-bottom flex-col'>
-				<a href = '' title = 'FAQ'><i class="fas fa-question-circle"></i></a>
 				<a href = 'https://github.com/itslupus/shakepong' title = 'Github' target = '_blank'><i class="fab fa-github"></i></a>
 				<p>v{{ data['version'] }}</p>
 			</div>
