--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,12 +35,17 @@ h1, h2, h3 {
 }
 
 input {
-	font-size: 1rem;
+	font-size: 0.9rem;
 	border: none;
-	border-bottom: 1.5px solid rgba(255, 255, 255, 0.5);
+	border: 1.5px solid rgba(255, 255, 255, 0.5);
 	background-color: transparent;
 	padding: 0.5rem;
 	color: var(--white);
+}
+
+input[type = 'checkbox'] {
+	width: 1.25rem;
+	height: 1.25rem;
 }
 
 button {
